tests/errors/struct_virtual.vt
struct P { x: int; virtual fn m() {} } fn main(){}
